# spg

./: LICENSE.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
html/: index.css  index.html
rs/: Cargo.toml
rs/src/: config.rs  error.rs  image_table.rs  main.rs  monitor_fs.rs  resources.rs  server.rs  tests.rs
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: index.tsx
